--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -562,6 +562,12 @@
     <Compile Include="dlgCombineforGraphics.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmSetupLoading.Designer.vb">
+      <DependentUpon>frmSetupLoading.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmSetupLoading.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="sdgCanonicalCorrelation.Designer.vb">
       <DependentUpon>sdgCanonicalCorrelation.vb</DependentUpon>
     </Compile>
@@ -2224,6 +2230,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgCombineforGraphics.sw-KE.resx">
       <DependentUpon>dlgCombineforGraphics.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSetupLoading.fr-FR.resx">
+      <DependentUpon>frmSetupLoading.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSetupLoading.resx">
+      <DependentUpon>frmSetupLoading.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSetupLoading.sw-KE.resx">
+      <DependentUpon>frmSetupLoading.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="sdgBarChart.fr-FR.resx">
       <DependentUpon>sdgBarChart.vb</DependentUpon>
