--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -4015,7 +4015,7 @@
     <Content Include="static\InstatObject\R\instat_object_R6.R">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="static\Library\Climatic guide data.xlsx">
+    <Content Include="static\Library\Climatic_guide_data.xlsx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="static\Library\RainGalle.xlsx">
