creating new sdgLayers

--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -606,6 +606,12 @@
     <Compile Include="sdgFrequencyPolygonOptions.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="sdgLayers.Designer.vb">
+      <DependentUpon>sdgLayers.vb</DependentUpon>
+    </Compile>
+    <Compile Include="sdgLayers.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="sdgModelOptions.Designer.vb">
       <DependentUpon>sdgModelOptions.vb</DependentUpon>
     </Compile>
@@ -2364,6 +2370,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="sdgHistogramOptions.sw-KE.resx">
       <DependentUpon>sdgHistogramOptions.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sdgLayers.fr-FR.resx">
+      <DependentUpon>sdgLayers.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sdgLayers.resx">
+      <DependentUpon>sdgLayers.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sdgLayers.sw-KE.resx">
+      <DependentUpon>sdgLayers.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="sdgModelOptions.fr-FR.resx">
       <DependentUpon>sdgModelOptions.vb</DependentUpon>
