created Filter control

--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -642,6 +642,12 @@
     <Compile Include="sdgThemeOptions.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="ucrFilter.Designer.vb">
+      <DependentUpon>ucrFilter.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ucrFilter.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="ucrGeomListWithAes.designer.vb">
       <DependentUpon>ucrGeomListWithAes.vb</DependentUpon>
     </Compile>
@@ -3595,6 +3601,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ucrFactor.sw-KE.resx">
       <DependentUpon>ucrFactor.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ucrFilter.fr-FR.resx">
+      <DependentUpon>ucrFilter.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ucrFilter.resx">
+      <DependentUpon>ucrFilter.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ucrFilter.sw-KE.resx">
+      <DependentUpon>ucrFilter.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ucrGeomListWithAes.fr-FR.resx">
       <DependentUpon>ucrGeomListWithAes.vb</DependentUpon>
