--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -306,6 +306,12 @@
     <Compile Include="dlgExportDataset.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgFreezeColumns.Designer.vb">
+      <DependentUpon>dlgFreezeColumns.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgFreezeColumns.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgFromLibrary.Designer.vb">
       <DependentUpon>dlgFromLibrary.vb</DependentUpon>
     </Compile>
@@ -588,6 +594,10 @@
     <Compile Include="dlgCombineforGraphics.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgRownamesOrNumbers.Designer.vb">
+      <DependentUpon>dlgRownamesOrNumbers.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgRownamesOrNumbers.vb" />
     <Compile Include="frmSetupLoading.Designer.vb">
       <DependentUpon>frmSetupLoading.vb</DependentUpon>
     </Compile>
@@ -1915,6 +1925,9 @@
     <EmbeddedResource Include="dlgExportDataset.sw-KE.resx">
       <DependentUpon>dlgExportDataset.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="dlgFreezeColumns.resx">
+      <DependentUpon>dlgFreezeColumns.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="dlgFromLibrary.fr-FR.resx">
       <DependentUpon>dlgFromLibrary.vb</DependentUpon>
     </EmbeddedResource>
@@ -2346,6 +2359,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgCombineforGraphics.sw-KE.resx">
       <DependentUpon>dlgCombineforGraphics.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgRownamesOrNumbers.resx">
+      <DependentUpon>dlgRownamesOrNumbers.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSetupLoading.fr-FR.resx">
       <DependentUpon>frmSetupLoading.vb</DependentUpon>
