--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -308,6 +308,12 @@
     <Compile Include="dlgExportDataset.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgFourVariableModelling.Designer.vb">
+      <DependentUpon>dlgFourVariableModelling.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgFourVariableModelling.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgFreezeColumns.Designer.vb">
       <DependentUpon>dlgFreezeColumns.vb</DependentUpon>
     </Compile>
@@ -1961,6 +1967,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgExportDataset.sw-KE.resx">
       <DependentUpon>dlgExportDataset.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgFourVariableModelling.fr-FR.resx">
+      <DependentUpon>dlgFourVariableModelling.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgFourVariableModelling.resx">
+      <DependentUpon>dlgFourVariableModelling.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgFourVariableModelling.sw-KE.resx">
+      <DependentUpon>dlgFourVariableModelling.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgFreezeColumns.resx">
       <DependentUpon>dlgFreezeColumns.vb</DependentUpon>
